# agentXhackathon

./: .env.example  .gitignore  AgentBeats_Competition_Green_Agent_Track_Ideas.md  README.md  SETUP_COMPLETE.md  about_the_hackathon.md  agentsbeatdocs.md  offcial_github.md  pyproject.toml
docs/: GETTING_STARTED.md  PAPER2AGENT_BENCHMARKS.md  PAPERS_INDEX.md  QUICK_REFERENCE.md
scenarios/coding_agent/: README.md  green_agent.py  purple_agent.py  scenario.toml
scenarios/research_code_extraction/: README.md  green_agent.py  purple_agent.py  scenario.toml
scenarios/research_reproducibility/: README.md  green_agent.py  purple_agent.py  scenario.toml
scenarios/tutorial_understanding/: README.md  green_agent.py  scenario.toml
src/agentbeats/: __init__.py  client.py  green_executor.py  models.py  run_scenario.py
